syntax = "proto3";

package skeleton.proto;

import "_/records/Protobuf.proto";

message Skeleton {
    string field1  = 1
        [(_.records.primary_key) = true];
    string field2  = 2
        [(_.records.primary_key) = true];
}

message Message {
    option (_.records.default_id) = 'message_id';
    string field1  = 1;
    string field2  = 2;
}

message NoTable {
    option (_.records.ignore) = true;
    string field1  = 1;
    string field2  = 2;
}

message DefaultId {
    string field1 = 1
        [(_.records.unique) = true];
    int32  field2 = 2
        [(_.records.unique) = true];
    repeated int32  field3 = 3;
}
